# Project-GIF-Picker

./: .gitignore  README.md  io.ricol03.gif-picker.yml  io.ricol03.gifpicker.yml  meson.build  window.ui  windows-cross-amd64.txt  windows-cross-arm32.txt
data/: gresource.xml  io.ricol03.gif-picker.desktop  io.ricol03.gifpicker.desktop  style.css
src/: About.vala  Application.vala  Dialogs.vala  Files.vala  Gif.vala  Gifs.vala  Logs.vala  Main.vala  Settings.vala  Tray.vala  WinClipboard.c  Window.vala  project-gif-picker.gresource.xml
src/windows/: WinClipboard.h
